kubernetes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: starfleet-navigation-route
spec:
  parentRefs:
    - name: starfleet-global-gateway

  rules:
    - backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: starfleet-navigation-service
          port: 80
